--- a/lf1/index.html
+++ b/lf1/index.html
@@ -56,7 +56,7 @@ Danke der Nachfrage.
       <div id="wc_circle"></div>
 
       <div id="wc_t_wrapper">
-      <div id="wc_more" onclick="scrollDown('slide_welcome');">&#709; Mehr Erfahren</div>
+      <div id="wc_more" onclick="scrollDown('slide_welcome');">Mehr Erfahren</div>
       <div id="wc_text">Dies ist der digitale Messestand von Aurubis! Aufgrund der aktuellen Pandemie werden wir dieses Jahr keinen traditionellen Messestand anbieten, stattdessen haben wir diese interaktive Informationswebsite erstellt. Klicken Sie auf mehr erfahren bzw. auf Weiter (rechts), um fortzufahren.</div>
       </div>
 
@@ -118,7 +118,7 @@ Danke der Nachfrage.
       <div class="slide_prev" id="aurubis_prev" onclick="scrollSide('slide_welcome');"></div>
 
       <div id="ar_info">
-        <div id="ar_info_more" onclick="scrollDown('slide_aurubis');">&#709; Mehr Erfahren</div>
+        <div id="ar_info_more" onclick="scrollDown('slide_aurubis');">Mehr Erfahren</div>
         <div id="ar_info_text">Aurubis produziert aus Kupferkonzentrat und Recyclingmaterialien hochreines und hochwertiges Kupfer und verarbeitet es weiter zu Vorprodukten. Altkupfer und diverse andere Recyclingmaterialien werden so wieder dem Wirtschaftskreislauf zugeführt. Pro Jahr produzieren wir mehr als 1 Mio. Tonnen börsenfähiger Kupferkathoden.</div>
       </div>
 
@@ -199,7 +199,7 @@ Danke der Nachfrage.
 
       <div id="env_tit">Nachhaltigkeit</div>
       <div id="env_info">
-        <div id="env_info_more" onclick="scrollDown('slide_env');">&#709; Mehr Erfahren</div>
+        <div id="env_info_more" onclick="scrollDown('slide_env');">Mehr Erfahren</div>
         <div id="env_info_text">Wir sind weltweit führend im Umweltschutz und Energieeffizienz und sind uns als energieintensives Unternehmen der Grundstoffindustrie der Verantwortung für Umwelt und Klima bewusst.Durch den Einsatz modernster Technologien minimieren wir unseren ökologischen Fußabdruck. Aurubis-Produkte leisten einen wesentlichen Beitrag zur Energiewende und zur Verbesserung der CO2-Bilanz der Menschen in ihrem Alltag.</div>
       </div>
 
@@ -261,7 +261,7 @@ Danke der Nachfrage.
 
       <div id="it_tit">Aurubis & IT?</div>
       <div id="it_info">
-        <div id="it_info_more" onclick="scrollDown('slide_it');">&#709; Mehr Erfahren</div>
+        <div id="it_info_more" onclick="scrollDown('slide_it');">Mehr Erfahren</div>
         <div id="it_info_text">Intelligent, effizient und nachhaltig: Die digitale Transformation stellt hohe Ansprüche und bringt gleichzeitig spannende Herausforderungen mit sich – insbesondere in der IT. Wir sind Aurubis, eines der weltweit führenden Multimetall-Unternehmen und einer der größten Kupferrecycler der Welt.</div>
       </div>
 
